<resources>
    <string name="app_name">Mi Aplicación</string>
    <string name="hint_nombre">Introduce tu nombre</string>
    <string name="btn_saludar">Saludar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_cerrar">Cerrar</string>
    <string name="btn_calcular">Calcular</string>
    <string name="alumno">jose emiliano velarde ramirez</string>
    <string name="matricula">matricula</string>
    <string name="materia">programacion movil</string>
    <string name="altura">Captura tu altura</string>
    <string name="peso">Captura tu peso</string>
    <string name="msj">Su resultado Aparece aqui¡</string>
    <string name="cel">celcius a farenheint</string>
    <string name="far">farenheint a celcius</string>
    <string name="grados">Grados</string>
    <string name="cantidad">capturar cantidad</string>
    <string name="res">resultado</string>

</resources>
