<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtGrados"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/cel"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="17sp"
        android:hint="@string/cantidad"
        android:textColor="@color/miAzul"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/txtGrados"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txtCantidad"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbdCel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cel"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/rbdFar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/far"
            android:textSize="20sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_limpiar"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cerrar"
        app:layout_constraintTop_toBottomOf="@id/btnLimpiar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/res"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/btnCerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
